--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
+    "react-transition-group": "^4.4.5",
     "remixicon": "^4.3.0",
     "web-vitals": "^2.1.4"
   },
