--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.11.3",
     "boxicons": "^2.1.4",
     "echarts": "^5.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
