--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "boxicons": "^2.1.4",
     "echarts": "^5.5.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
